--- a/src/app/modules/upload-document/style.css
+++ b/src/app/modules/upload-document/style.css
@@ -10,12 +10,19 @@
     display: flex;
     flex-direction: row-reverse;
     flex: 1;
+    width: 50%;
     align-items: center;
-    justify-content: center;
-    background-color: azure;
-    margin: 5px;
+}
+.sectionOne {
+    flex: 3;
+}
+.sectionOneField {
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 100%;
 }
 .labelStyle {
-    text-align: center;
+    text-align: right;
     margin-left: 5px;
+    flex: 1;
 }
