--- a/src/app/modules/upload-document/style.css
+++ b/src/app/modules/upload-document/style.css
@@ -1,21 +1,23 @@
 .upload_container {
     display: flex;
     flex: 1;
-    padding: 10px 30px;
+    padding: 30px;
     flex-direction: column;
     align-items: flex-end;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin-bottom: 10px;
 }
 .inputView {
     display: flex;
     flex-direction: row-reverse;
     flex: 1;
-    width: 50%;
+    width: 100% !important;
+    
     align-items: center;
 }
 .sectionOne {
     flex: 3;
+    min-width: 80% !important;
 }
 .sectionOneField {
     padding-left: 5px;
@@ -26,10 +28,15 @@
     text-align: right;
     margin-left: 5px;
     flex: 1;
+    max-width: 20% !important;
+    line-height: 60px;
 }
 .message_section {
     background-color: #EF5350;
     color: white;
     padding: 5px;
     text-align: center;
+}
+.custom-input {
+    height: 45px !important;
 }
