fixed some issues

--- a/src/app/pages/dashboard/tabs.css
+++ b/src/app/pages/dashboard/tabs.css
@@ -8,19 +8,43 @@
     margin-left: 5px;
     cursor: pointer;
 }
+
 .general-tab {
     background: #E4E6EF !important;
-    color:black !important;
+    color: black !important;
 }
+
 .active-tab {
     background: #009EF7 !important;
-    color:white !important;
+    color: white !important;
 }
+
 .main-container-dashboard {
     background: white !important;
     padding: 50px !important;
-    box-shadow: 0 0px 10px rgb(0 0 0 / 20%) !important; 
+    box-shadow: 0 0px 10px rgb(0 0 0 / 20%) !important;
 }
+
 .w-170-px {
     min-width: 170px !important;
+}
+
+.button-parent-div {
+    width: 100% ;
+    display: flex ;
+    align-items: center ;
+    justify-content: center ;
+    padding: 100px;
+    cursor: pointer
+}
+.ml-xl-100 {
+    margin-left: 100px;
+}
+@media screen and (max-width: 767px) {
+    .button-parent-div {
+        display: block;
+    }
+    .ml-xl-100 {
+        margin-left: 0px;
+    }
 }
